updated write permissions

--- a/smb.conf
+++ b/smb.conf
@@ -5,7 +5,10 @@
 
 [Shared]
    path = /srv/samba/shared
-   browsable = yes
    writable = yes
+   browseable = yes
    guest ok = yes
    read only = no
+   create mask = 0777
+   directory mask = 0777
+
